Mobile Hamburger Menu / Album Grid

--- a/pages/albums/red-shirts.html
+++ b/pages/albums/red-shirts.html
@@ -256,5 +256,7 @@ Now, all these songs are both old and new. Both pre- and nearly post. And long o
       </div>
     </div>
   </footer>
+
+  <script src="../../assets/js/app.js"></script>
 </body>
 </html>
